compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_constructors.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type Box { Box(x: Int) }\ntype Boxy { Box(Int) }"

---
error: Duplicate function definition with name `Box`
  ┌─ /src/one/two.gleam:2:13
  │
1 │ type Box { Box(x: Int) }
  │            ----------- previously defined here
2 │ type Boxy { Box(Int) }
  │             ^^^^^^^^ redefined here


